src/test/ui/use/use-after-move-self.stderr
error[E0382]: use of moved value: `*self.x`
  --> $DIR/use-after-move-self.rs:20:16
   |
LL |         self.bar();
   |         ---- value moved here
LL |         return *self.x;  //~ ERROR use of moved value: `*self.x`
   |                ^^^^^^^ value used here after move
   |
   = note: move occurs because `self` has type `S`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
